@@ -152,8 +152,7 @@ every change.
 Routes are basically just fancy paths that can contain different kinds of
 placeholders and usually lead to an action. The first argument passed to all
 actions (the invocant C<$self>) is a L<Mojolicious::Controller> object
-containing both the HTTP request and response, which, for convenience, is also
-available as C<$_>.
+containing both the HTTP request and response.
 
   use Mojolicious::Lite;
 
